Fri Dec 10 22:57:22 2004  Marek Brudka  <mbrudka@aster.pl>

	* tests/QtReactor_Test.cpp (Message):
	Removed unnecesary log about lack of Qt support.

Fri Dec 10 22:39:12 2004  Marek Brudka  <mbrudka@aster.pl>

	* bin/MakeProjectCreator/config/global.features (Message):
	Disabled by default ace_With_xt and ace_with_x11.

	* include/makeinclude/wrapper_macros.GNU (Module):
	Replace qt_rector variables by qt, as MPC currently uses qt feature.

Fri Dec 10 01:04:52 2004  Marek Brudka  <mbrudka@aster.pl>

	* examples/Misc/.cvsignore (Module):
	Created few ignores to make cvs silent.

Fri Dec 10 00:45:56 2004  Marek Brudka  <mbrudka@aster.pl>

	* tests/.cvsignore (Module):
	Created few ignores to make cvs silent.

	* ace/ace_xtreactor.mpc (Module):

	* ace/config-tandem.h (Module):
	* ace/config-doxygen.h (Module):
	* ace/XtReactor.cpp (Module):
	Removed ACE_HAS_XT macros.

	* ace/XtReactor.h (Module):
	Removed ACE_HAS_XT macros and applied export macros for ACE_XtReactor.

	* ace/README (Module):
	Removed notice on ACE_HAS_XT.

	* ace/ACE_XtReactor_export.h (Module):
	Create export macros for XtReactor. Please, do not ask if anyone needs these macros
	under Windows. Probably no, but they are present here to remain consistent with
	the rest of ACE.

	* tests/tests.mpc (Module):
	Created two project XtReactor_Tests for Athena widgets and Motif.
	Removed XtReactor_Test.

	* tests/XtReactor_Test.cpp (Module):
	* tests/XtMotifReactor_Test.cpp (Module):
	* tests/XtAthenaReactor_Test.cpp (Module):
	XtReactor_Test was splitted into separate test for Athena widgets and Motif,
	hence they depend on distinct libraries. Removed ACE_HAS_XT and ACE_LACKS_MOTIF
	macros, as they are not needed now.

	* examples/Misc/test_XtReactor2.cpp (Module):
	* examples/Misc/test_XtReactor1.cpp (Module):
	Removed ACE_HAS_XT macros.

	* examples/Misc/Misc.mpc (Module):
	Added dependencies on ace_xtreactor and ace_motif.

	* bin/MakeProjectCreator/config/tao_xtreactor.mpb (Module):