@@ -2883,9 +2883,10 @@ shared_libs_only Only build shared libraries.  Ignored if no SHLIBs are
                    specified by the Makefile, as in performance-tests/Misc.
 static_libs_only Only build static libraries.
 threads          Build with thread support.
-xt_reactor       Build the XtReactor.
+xt_reactor       Build the XtReactor. Needs makefiles generated with  ace_with_xt=1, ace_with_x11=1.
 fl_reactor       Build the FlReactor.
 tk_reactor       Build the TkReactor.
+qt_reactor       Build the QtReactor. Needs makefiles generated with  qt=1.
 gtk_reactor      Build the GtkReactor.
 ssl              Build with OpenSSL support.
 rapi             Build with RAPI
@@ -2960,7 +2961,7 @@ from
 <EM><br> -->
 
 <!-- hhmts start -->
-Last modified: Fri Dec 10 00:31:08 CET 2004
+Last modified: Fri Dec 10 23:52:23 CET 2004
 <!-- hhmts end -->
 
 
